@@ -56,6 +56,7 @@ is_deeply(
        'ibuf_merged'               => '19817684',
        'ibuf_merges'               => '3552620',
        'innodb_lsn'                => '540805326864',
+       'unflushed_log'             => '0',
        'flushed_to'                => '540805326864',
        'pending_log_writes'        => '0',
        'pending_chkp_writes'       => '0',
@@ -102,6 +103,7 @@ is_deeply(
       'ibuf_merged'               => '15956910',
       'ibuf_merges'               => '1676050',
       'innodb_lsn'                => '13093949495856',
+      'unflushed_log'             => '1276529',
       'flushed_to'                => '13093948219327',
       'pending_log_writes'        => '1',
       'pending_chkp_writes'       => '2',
@@ -158,6 +160,7 @@ is_deeply(
       'ibuf_merged'               => '0',
       'ibuf_merges'               => '0',
       'innodb_lsn'                => '103216',
+      'unflushed_log'             => '0',
       'flushed_to'                => '103216',
       'pending_log_writes'        => '0',
       'pending_chkp_writes'       => '0',
