@@ -1,5 +1,6 @@
 Changes for templates:
 
+	* Restored unflushed_log, which was accidentally deleted in 1.1.3.
 	* Added active and locked transactions to the InnoDB Transactions graph.
 	* Added the InnoDB Memory Allocation graph.
 	* Added the InnoDB Adaptive Hash Index graph.
